Subdivide method "Straight Cut" not working when N-Gons enabled #72050

Closed
opened 2019-11-29 20:33:38 +01:00 by Karja Krähwald · 7 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Worked: (optional)

Short description of error
Subdivide in Edit mode: Quad Corner Type "Straight Cut" not working if "Create N-Gons" is enabled, falls back to "Inner Vert".

Exact steps for others to reproduce the error
Subdivide Bug Straight Cut.jpg

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Worked: (optional) **Short description of error** Subdivide in Edit mode: Quad Corner Type "Straight Cut" not working if "Create N-Gons" is enabled, falls back to "Inner Vert". **Exact steps for others to reproduce the error** ![Subdivide Bug Straight Cut.jpg](https://archive.blender.org/developer/F8179100/Subdivide_Bug_Straight_Cut.jpg)

Added subscriber: @karja

Added subscriber: @karja

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm.
For some reason this option only works when Create N-Gons is disabled.
I think it should be the other way around since Straight Cut is the only option that creates N-Gons on the subdividided face.

(that behavior was introduced in 3875461a)

I can confirm. For some reason this option only works when `Create N-Gons` is disabled. I think it should be the other way around since `Straight Cut` is the only option that creates N-Gons on the subdividided face. (that behavior was introduced in 3875461a)

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

'Straight Cut' is actually documented as creating N-Gons. However, the 'Create N-Gons' option is documented as:

Quad/Tri Mode: Forces subdivide to create triangles or quads instead of n-gons (see examples below). This mode doesn’t allow the use of Straight Cut on quad corners.

This is probably the source of the bug: the checkbox is documented as the opposite ("force quad/tris" instead of "allow Ngons"), causing confusion.

'Straight Cut' is actually [documented as creating N-Gons](https://docs.blender.org/manual/en/dev/modeling/meshes/editing/subdividing/subdivide.html#options). However, the 'Create N-Gons' option is documented as: > **Quad/Tri Mode**: Forces subdivide to create triangles or quads instead of n-gons (see examples below). This mode doesn’t allow the use of Straight Cut on quad corners. This is probably the source of the bug: the checkbox is documented as the opposite ("force quad/tris" instead of "allow Ngons"), causing confusion.
Sybren A. Stüvel changed title from Subdivide method "Straight Cut" not working to Subdivide method "Straight Cut" not working when N-Gons enabled 2020-01-20 16:10:00 +01:00

This issue was referenced by dae033801b

This issue was referenced by dae033801b8c98bcac5a09ba3bf77868b7204540
Sybren A. Stüvel self-assigned this 2020-01-20 16:17:44 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72050
No description provided.