Fix T72050 Subdivide method "Straight Cut" not working with N-Gons enabled

'Straight Cut' is actually documented as creating N-Gons. However, the
code was disallowing this. This is probably a mix-up as the "allow N-Gons"
option is documented as a "force quad/tri" option.